# weahist

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pages.yml
scripts/: serve-lan.sh
src/weahist/: __init__.py  cli.py  config.py  errors.py  models.py
src/weahist/api/: __init__.py  app.py  deps.py
src/weahist/clients/: __init__.py  air_quality.py  archive.py  base.py  forecast.py  geocoding.py
src/weahist/services/: __init__.py  history.py
src/weahist/storage/: __init__.py  base.py  parquet_cache.py
src/weahist/visualization/: __init__.py  _helpers.py  base.py  matplotlib_renderer.py  plotly_renderer.py
tests/: conftest.py
tests/clients/: test_air_quality.py  test_archive.py  test_forecast.py  test_geocoding.py
tests/services/: test_history.py
tests/storage/: test_parquet_cache.py
web/: api.js  app.js  aqi.js  chart.js  index.html  styles.css  theme.js
